--- a/course.html
+++ b/course.html
@@ -47,19 +47,66 @@
         stay ahead in this rapidly evolving field by mastering the principles that drive responsible AI development.
     </p>
 
-    <!-- Space for YouTube Video -->
-    <div class="video-container">
-        <iframe
-          src="https://www.youtube.com/embed/aKx3yFjec74" 
-          title="YouTube video player" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen>
-        </iframe>
-        <div class="video-container-caption">
-          After years of helming the ship at some of the country’s most iconic companies, including Walmart, Starbucks, and Walgreens, Rosalind Brewer has forged ahead in her quest to innovate while maintaining deep integrity. Now she’s sharing CEO-level strategies for team leaders of all types. Learn to promote innovation, gain buy-in on projects you believe in, and stand out as the leader you know yourself to be.
+    <div class="info-content-section">
+      <!-- Space for YouTube Video -->
+      <div class="video-container">
+          <iframe
+            src="https://www.youtube.com/embed/aKx3yFjec74" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+          </iframe>
+          <div class="video-container-caption">
+            After years of helming the ship at some of the country’s most iconic companies, including Walmart, Starbucks, and Walgreens, Rosalind Brewer has forged ahead in her quest to innovate while maintaining deep integrity. Now she’s sharing CEO-level strategies for team leaders of all types. Learn to promote innovation, gain buy-in on projects you believe in, and stand out as the leader you know yourself to be.
+          </div>
+      </div>
+
+      <div class="info-content-principles">
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Fairness</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Fairness means ensuring AI systems treat all employees equally, with HR involvement in their design and deployment, and proper training before use.
+          </div>
         </div>
+
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Transparency</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Transparency means ensuring people know when and how AI is used, especially in decisions affecting careers, and understand how it influences those decisions.
+          </div>
+        </div>
+
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Data Privacy & Security</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Privacy means AI systems must protect employee data, ensuring individuals feel secure in sharing information only when their privacy is clearly safeguarded and access is limited to trained personnel.
+          </div>
+        </div>
+
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Responsibility</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Responsibility means ensuring those who design and deploy AI are responsible for its outcomes, with clear ownership, organization-wide training, and ongoing updates as AI use evolves.
+          </div>
+        </div>
+
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Reliability</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Reliability means AI systems must consistently perform safely and as intended, with clear parameters, real-world testing, and human oversight to identify and correct any blind spots or unintended behaviors.
+          </div>
+        </div>
+
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Humanization</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Humanization in AI ethics emphasizes designing systems that respect human values, emotions, and dignity. It ensures AI supports—not replaces—human judgment, promoting empathy, fairness, and accountability in all interactions.
+          </div>
+        </div>
+      </div>
     </div>
+    
 </section>
 <section class="ethical-ai-section">
     <h2 class="section-title">Who is this Ethical AI for?</h2>
@@ -166,5 +213,7 @@
 </section>
 
 
+<!-- Scripts to use for the page -->
+<script src="scripts/infoContentPrinciples.js"></script>
 </body>
 </html>
