--- a/index.html
+++ b/index.html
@@ -42,16 +42,12 @@
       <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" class="hero-btn">LinkedIn</a>
     </div>
     <div class="hero-scroll-images">
-      <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
-      <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 2">
-      <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 3">
-      <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
-      <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-      <img src="https://lh3.googleusercontent.com/d/1YOQIGPU5mNXoHT7EbDlekQl1ajGGAClB" alt="Slide 3">
-      <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
-      <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
-      <img src="https://lh3.googleusercontent.com/d/1M-lPhzAHFchO3T-8p2cy-dkQKX_MykLJ" alt="Slide 6">
-      <img src="https://lh3.googleusercontent.com/d/11XQcVoOiTwHiubu2zSRY4c-rjiWKaia4" alt="Slide 7">
+      <img src="./assets/heroscroll/1.jpeg" alt="Neema Slide 1">
+      <img src="./assets/heroscroll/2.jpg" alt="Neema Slide 2">
+      <img src="./assets/heroscroll/3.jpg" alt="Neema Slide 3">
+      <img src="./assets/heroscroll/4.jpeg" alt="Slide 1">
+      <img src="./assets/heroscroll/5.jpeg" alt="Slide 2">
+      <img src="./assets/heroscroll/6.jpeg" alt="Slide 3">
     </div>
   </section>
 
@@ -139,7 +135,7 @@
   <section id="about"></section>
   <div class="about-ceo">
     <div class="ceo-photo">
-      <img src="About.jpg" alt="CEO Photo" />
+      <img src="About.png" alt="CEO Photo" />
     </div>
     <div class="ceo-text">
       <h2 class="ceo-title">
