--- a/course.html
+++ b/course.html
@@ -35,28 +35,28 @@
         <!-- Text and Button on the Right -->
         <div class="text-container">
             <h1>NEEMA BALOLEBWAMI NELLY</h1>
-            <h2>Ethical AI Teacher</h2>
-            <p>Empower yourself with the knowledge and skills to navigate the ethical challenges of AI.</p>
-            <a href="#form" class="cta-button">Join Our Course</a>
+            <h2>Ethical AI Trainer</h2>
+            <div style="padding: 0px 30px">Expert in Artificial Intelligence, CEO of EMEA Venture Builder</div>
+            <div style="padding: 0px 30px">Founder of NEEMA AI, Software Engineer and Economist</div>
+            <a href="#form" class="cta-button">Join The Course</a>
+            <!--
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc8Y9lbtvB5-ezSjZgCR-d0oJptgAhkxOT3QJDr1voLqxqwgQ/viewform?usp=dialog" 
                   width="480" 
-                  height="480" 
+                  height="600" 
                   frameborder="0" 
                   marginheight="0" 
                   marginwidth="0"
                   style="margin: 40px auto; display: block;"
               >
               Loading…
-          </iframe>
-        </div>
-    </div>
+          </iframe> -->
+
+            
 </section>
 <section class="info-section">
-    <h2>Unlock the Future of Technology: An Introduction to Ethical AI and Its Impact on Our World</h2>
+    <h2>Unlock the Power of Responsible AI: Learn how to use, build, and deploy ethical AI systems in processes</h2>
     <p>
-        Dive into the world of AI ethics with our immersive online course, where you'll explore key concepts 
-        and gain practical insights to navigate the complexities of ethical AI. Enhance your expertise and 
-        stay ahead in this rapidly evolving field by mastering the principles that drive responsible AI development.
+        In this course, you will explore the seven core principles that define ethical AI. These concepts are designed to promote responsible innovation and practical application. You will gain insight into how these foundations influence the future of AI development and deployment in evolving contexts.
     </p>
 
     <div class="info-content-section">
@@ -70,7 +70,7 @@
             allowfullscreen>
           </iframe>
           <div class="video-container-caption">
-            After years of helming the ship at some of the country’s most iconic companies, including Walmart, Starbucks, and Walgreens, Rosalind Brewer has forged ahead in her quest to innovate while maintaining deep integrity. Now she’s sharing CEO-level strategies for team leaders of all types. Learn to promote innovation, gain buy-in on projects you believe in, and stand out as the leader you know yourself to be.
+            After eight years building AI powered solutions and providing training to companies and organizations, I have seen the real consequences of AI systems built without ethical guardrails, the challenges of AI deployment where shortcuts in ethics led to long term risks. From biased algorithms to transparency gaps, the lack of governance can erode trust and compromise impact. Ethical AI isn’t optional, it is foundational.
           </div>
       </div>
 
@@ -78,42 +78,56 @@
         <div class="info-content-principle">
           <button class="info-content-principle-button"><span>Fairness</span><span class="info-content-principle-button-chevron">▶</span></button>
           <div class="info-content-principle-content">
-            Fairness means ensuring AI systems treat all employees equally, with HR involvement in their design and deployment, and proper training before use.
+            AI fairness means eliminating bias in data and model outcomes, and ensuring representative training datasets. Algorithmic fairness focuses on building AI systems that treat individuals equally.
           </div>
         </div>
 
         <div class="info-content-principle">
           <button class="info-content-principle-button"><span>Transparency</span><span class="info-content-principle-button-chevron">▶</span></button>
           <div class="info-content-principle-content">
-            Transparency means ensuring people know when and how AI is used, especially in decisions affecting careers, and understand how it influences those decisions.
+            Transparency means openness in data sources and model decisions, explainable to stakeholders on how AI makes decisions, how outcomes are determined, and a showcase of the data footprint, how it has been collected, built, and deployed.
           </div>
         </div>
 
         <div class="info-content-principle">
           <button class="info-content-principle-button"><span>Data Privacy & Security</span><span class="info-content-principle-button-chevron">▶</span></button>
           <div class="info-content-principle-content">
-            Privacy means AI systems must protect employee data, ensuring individuals feel secure in sharing information only when their privacy is clearly safeguarded and access is limited to trained personnel.
+            Data privacy and security involve protecting sources of data and model processes, ensuring user information is safeguarded, sensitive data is responsibly managed, and breaches are avoided without explicit permission or informed consent.
           </div>
         </div>
 
         <div class="info-content-principle">
-          <button class="info-content-principle-button"><span>Responsibility</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <button class="info-content-principle-button"><span>Accountability</span><span class="info-content-principle-button-chevron">▶</span></button>
           <div class="info-content-principle-content">
-            Responsibility means ensuring those who design and deploy AI are responsible for its outcomes, with clear ownership, organization-wide training, and ongoing updates as AI use evolves.
+            Accountability means making sure people know who is responsible for AI decisions, checking how those decisions are made, keeping records of how data is used, and how it works as expected.
           </div>
         </div>
 
         <div class="info-content-principle">
           <button class="info-content-principle-button"><span>Reliability</span><span class="info-content-principle-button-chevron">▶</span></button>
           <div class="info-content-principle-content">
-            Reliability means AI systems must consistently perform safely and as intended, with clear parameters, real-world testing, and human oversight to identify and correct any blind spots or unintended behaviors.
+            Reliability means that an AI system works well without crashing, gives accurate results each time, keeps errors low, and responding correctly in different tasks and using various kinds of data.
           </div>
         </div>
 
         <div class="info-content-principle">
           <button class="info-content-principle-button"><span>Humanization</span><span class="info-content-principle-button-chevron">▶</span></button>
           <div class="info-content-principle-content">
-            Humanization in AI ethics emphasizes designing systems that respect human values, emotions, and dignity. It ensures AI supports—not replaces—human judgment, promoting empathy, fairness, and accountability in all interactions.
+            Humanization means designing systems that support people rather than replace them, creating tools that assist decision-making, improve user experience, optimize processes, automate tasks, and keep the human supervision present in AI.
+          </div>
+        </div>
+
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Inclusivity</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Inclusivity means making systems that AI serve all individuals, accommodating different genders, races, languages, experiences, and needs, and actively involving diverse users in the design, testing, and improvement of these technologies.
+          </div>
+        </div>
+
+        <div class="info-content-principle">
+          <button class="info-content-principle-button"><span>Integrity</span><span class="info-content-principle-button-chevron">▶</span></button>
+          <div class="info-content-principle-content">
+            Integrity means alignment with ethical standards, using audit trails, comprehensive validation protocols, and formal algorithmic governance frameworks to proactively detect, mitigate, and remediate unethical behaviors in AI systems.
           </div>
         </div>
       </div>
@@ -130,20 +144,20 @@
       <!-- About Section -->
       <h2>AI Expert | Software Engineer<br>Ethical AI Trainer | Keynote Speaker</h2>
       <p>
-        I am a founder of <a href="https://emeaventure.com/" target="_blank">EMEA Venture Builder</a> and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics, AI that is fair, transparent, and inclusive. My background include software engineering, data science, full-stack web development, and economics.
+        I am a founder of <a href="https://emeaventure.com/" target="_blank">EMEA Venture Builder</a> and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics. My background include software engineering, data science, full-stack web development, and economics.
         At EMEA Venture Builder, we develop personalized AI-driven software for businesses ranging from task automation, predictive analytics, LLM-powered solutions to custom data intelligence platforms.
       </p>
       <p>
-        Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards.
+        Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations to design and implement responsible AI.
       </p>
       <p>
-        As a keynote speaker and Master of Ceremonies, I engage global audiences with thought-provoking talks on ethical AI. My talks emphasize the urgent need for responsibility in innovation, social impact of machine learning, and the importance of building AI that serves everyone equally.
+        As a keynote speaker and MC, I engage global audiences with thought-provoking talks on ethical AI. My talks emphasize the urgent need for responsibility in innovation, social impact of machine learning, and the importance of building trustworthy AI that serves everyone equally.
       </p>
       <p>
         Academically, I hold two Master’s degrees: an MSc in Business and Research from University of Barcelona (Spain), and an MSc in Economy and Management from University of Annecy (France), along with diplomas in Data Science and Full-Stack Web Development.
-        In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and in 2024, I received the honorary Tech Leader of the Year award from Women Who Change the World.
+        In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and in 2025, I received the Honorary award of the Tech Leader of the Year.
       </p>
-      <a href="#form" class="cta-button">Join Our Course</a>
+      <a href="#form" class="cta-button">Join The Course</a>
     </div>
     <div class="ceo-photo">
       <img src="./assets/neema/aboutneema.jpg" alt="CEO Photo" />
@@ -160,7 +174,7 @@
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1tVy8Y6riFce1akb_bZFeR-WZGaD8CKn7" alt="Neema speaking" />
       <p>
-        I’ve delivered keynotes at universities and tech conferences on the importance of ethical, inclusive AI. My talks focus on fairness, transparency, and accountability in AI systems to empower responsible innovation.
+        I’ve delivered keynotes at universities and conferences on the importance of ethical AI, highlighting algorithmic fairness, data security, accountability, inclusivity, and humanization. My talks emphasize how organizations should develop and implement AI systems that are ethical.
       </p>
     </div>
 
