--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Muchas gracias Julieta por esta experiencia inolvidable! Fue un honor formar par
     <div style="display: flex; justify-content: center; gap: 15px;">
       <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" target="_blank">LinkedIn</a>
       <!-- <a href="https://x.com/NeemaBal" target="_blank">X</a> -->
-      <a href="https://www.instagram.com/neema_ai?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a>
+      <a href="https://www.instagram.com/speaker_nema/" target="_blank">Instagram</a>
       <!-- <a href="https://www.tiktok.com/@neema_ai" target="_blank">TikTok</a> -->
     </div>
     <div class="footer-contact">
