--- a/course.html
+++ b/course.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Neema AI Course</title> 
 
       <!-- External CSS -->
@@ -104,7 +105,8 @@
               >
               Loading…
           </iframe> -->
-
+        </div>
+        </div>
             
 </section>
 <section id="video" class="info-section">
